<resources>
    <string name="app_name">Comics Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="prev"><![CDATA[< Prev]]></string>
    <string name="random">Random</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="first"><![CDATA[|<]]></string>
    <string name="last"><![CDATA[>|]]></string>
    <string name="description">DESCRIPTION</string>
    <string name="title">Title</string>
    <string name="transcript">Transcript</string>
    <string name="comicimage">comicImage</string>
    <string name="get_comic_explanation">GET COMIC EXPLANATION</string>
    <string name="published_at">Published at:</string>
    <string name="saving_comics">saving comics</string>
</resources>