<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ComicsFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:iconifiedByDefault="false" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comicTitle"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:maxLines="5"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/comicImgView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/comicimage" />

            <TextView
                android:id="@+id/comicTranscript"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:ellipsize="end"
                android:maxLines="4"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/transcript"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_first"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/first" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prev" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_last"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_get_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_comic_explanation" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabSaveToFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:backgroundTint="@color/purple_500"
                    android:contentDescription="@string/saving_comics"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/fav_white_heart"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabShareComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:backgroundTint="@color/purple_500"
                    android:contentDescription="@string/saving_comics"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_baseline_share_24"
                    app:tint="@color/white" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</layout>